The habit section has been completed

--- a/Style/mobail.css
+++ b/Style/mobail.css
@@ -84,4 +84,13 @@
     right: 12px;
     border-radius: 9.07px;
   }
+
+  /* habits styles  */
+  .habits-section-heading-box{
+    padding: 10px 20px;
+  }
+  .habits-container {
+    grid-template-columns:  1fr;
+    padding: 50px;
+  }
 }
