--- a/Style/mobail.css
+++ b/Style/mobail.css
@@ -93,4 +93,32 @@
     grid-template-columns:  1fr;
     padding: 50px;
   }
+
+  /* run easily styles start  */
+
+  .run-easily {
+    padding-bottom: 66px;
+  }
+  .section-title{
+    font-size: 2rem;
+  }
+  .run-easily-container {
+    display: flex;
+    flex-direction: column;
+    border-radius: 18px;
+    padding: 30px 32px 29px 54px;
+  }
+
+  .run-easily-container {
+    margin: 0px 20px 20px 20px;
+    /* padding: 20px; */
+    gap: 31px;
+  }
+  .run-easily-text-box,.run-easily-image-box {
+    width: 100%;
+  }
+  .run-easily-container {
+    padding: 31px 33px;
+  }
+  
 }
