--- a/Style/mobail.css
+++ b/Style/mobail.css
@@ -114,11 +114,32 @@
     /* padding: 20px; */
     gap: 31px;
   }
-  .run-easily-text-box,.run-easily-image-box {
+  .run-easily-text-box,.run-easily-image-box, .run-btn  ,.bmi-heading-box,.bmi-chart-box,.calculate-btn,.bmi-calculate-box{
     width: 100%;
   }
   .run-easily-container {
     padding: 31px 33px;
   }
   
+  /* bmi calculator styles start  */
+  /* .bmi-heading-box {
+  width: 671px;
+  margin: 0 auto;
+  padding-bottom: 88px;
+} */
+
+.bmi-heading-box {
+  padding: 0px 20px 40px 20px;
+
+}
+  .bmi-calculator-container {
+    display: flex;
+    padding: 0px 20px 50px 20px;
+    flex-direction: column;
+  }
+  .bmi-calculator {
+    padding: 0px;
+}
+
+  /* bmi calculator styles end  */
 }
