--- a/Style/style.css
+++ b/Style/style.css
@@ -27,7 +27,8 @@ li {
 
 .navbar-container,
 .banner-container,
-.habits-container {
+.habits-container,
+.bmi-calculator-container {
   max-width: 1440px;
   margin: 0 auto;
   display: flex;
@@ -294,3 +295,115 @@ nav > ul > li {
 }
 
 /* run easily styles end  */
+
+/* ibm calculator styles start  */
+.bmi-calculator {
+  background-color: var(--bg-primary);
+  padding: 0px 0px 88px 0px;
+}
+.bmi-heading-box {
+  width: 671px;
+  margin: 0 auto;
+  padding-bottom: 88px;
+}
+.bmi-calculator-bg {
+  background-color: var(--secondary-bg);
+}
+.bmi-chart-box {
+  width: 443px;
+}
+.table-title {
+  font-size: 28px;
+  font-weight: 900;
+  line-height: 120%;
+  color: var(--primary-text);
+  margin: 52px 0px;
+}
+table,
+th,
+td {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-collapse: collapse;
+  text-align: left;
+  padding: 15px 18px;
+}
+th {
+  color: var(--primary-text);
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 120%;
+}
+td {
+  color: var(--secondary-text);
+}
+table {
+  margin-bottom: 100px;
+}
+
+.bmi-calculate-box {
+  width: 577px;
+}
+.bmi-calculate-title {
+  color: var(--primary-text);
+  font-size: 1.75rem;
+  font-weight: 900;
+  line-height: 120%;
+}
+.bmi-calculate-description {
+  color: var(--secondary-text);
+  margin-top: 14px;
+  font-size: 1.125rem;
+  font-weight: 400;
+  line-height: 24px;
+}
+.input-container-box {
+  display: flex;
+  gap: 12px;
+  
+}
+.input-box-one,
+.input-box-two {
+  width: 50%;
+}
+.input-box-two > input,
+.input-box-one > input {
+  width: 100%;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  outline: none;
+  padding: 12px 20px;
+  margin-top: 12px;
+  color: var(--secondary-text);
+}
+.input-box-two > select {
+  width: 100%;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  outline: none;
+  padding: 12px 20px;
+  margin-top: 12px;
+}
+select {
+  width: 100%;
+  border-radius: 8px;
+  background: rgba(255, 255, 255, 0.1);
+  border: none;
+  outline: none;
+  padding: 12px 20px;
+  margin-top: 12px;
+  color: var(--secondary-text);
+}
+option {
+  background-color: var(--secondary-bg);
+  padding: 0px 30px;
+}
+
+.calculate-btn {
+  width: 224px;
+  height: 54px;
+  margin-top: 34px;
+}
+
+/* ibm calculator styles end  */
