--- a/Style/tablet.css
+++ b/Style/tablet.css
@@ -42,4 +42,42 @@
     grid-template-columns:  repeat(2, 1fr);
     padding: 50px;
   }
+
+/* run easily styles start  */
+
+.run-easily {
+  padding-bottom: 66px;
+}
+.section-title{
+  font-size: 2rem;
+}
+.run-easily-container {
+  display: flex;
+  border-radius: 18px;
+  padding: 30px 32px 29px 54px;
+}
+
+.run-easily-container {
+  margin: 0px 20px 20px 20px;
+  gap: 31px;
+}
+.run-easily-text-box,.run-easily-image-box {
+  width: 100%;
+}
+.run-easily-container {
+  padding: 31px 33px;
+}
+
+
+.bmi-heading-box {
+  padding: 0px 20px 40px 20px;
+
+}
+  .bmi-calculator-container {
+    display: flex;
+    padding: 0px 20px 50px 20px;
+    flex-direction: column;
+  }
+
+
 }
