--- a/Style/tablet.css
+++ b/Style/tablet.css
@@ -79,5 +79,37 @@
     flex-direction: column;
   }
 
+  /* our team styles  */
+  .our-teams{
+    padding: 40px 50px;
+  }
+  .our-teams-container {
+
+    grid-template-columns: repeat(3, 2fr);
+
+  }
+
+  /* footer style start  */
+  .footer {
+
+    grid-template-columns:  1fr;
+    padding: 30px 0px;
+    width: calc(100% - 100px);
+    gap: 40px;
+  }
+  .link-box {
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
+ 
+}
+.link-box p{
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.3px;
+  padding-top: 20px;
+}
+  /* footer style end  */
 
 }
