--- a/Style/style.css
+++ b/Style/style.css
@@ -359,7 +359,6 @@ table {
 .input-container-box {
   display: flex;
   gap: 12px;
-  
 }
 .input-box-one,
 .input-box-two {
@@ -407,3 +406,93 @@ option {
 }
 
 /* ibm calculator styles end  */
+
+/* our times styles start  */
+.our-teams {
+  background-color: var(--bg-primary);
+  padding-bottom: 88px;
+}
+.our-teams-heading {
+  width: 671px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.our-teams-container {
+  max-width: 1060px;
+  margin: 0 auto;
+  display: grid;
+  align-items: center;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 20px;
+  background-color: var(--secondary-bg);
+  border-radius: 18px;
+  gap: 20px;
+  margin-top: 58px;
+}
+.team-image-box > img {
+  width: 100%;
+  border-radius: 18px;
+  height: 272px;
+}
+.team {
+  position: relative;
+}
+.team-text-box {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+}
+.team-text-box > h4 {
+  color: var(--primary-text);
+}
+.team-text-box > p {
+  color: var(--secondary-text);
+}
+/* our times styles end  */
+
+/* footer styles start  */
+footer {
+  background-color: var(--secondary-bg);
+}
+.footer {
+  display: grid;
+  width: 1059px;
+  margin: 0 auto;
+  padding: 66px 0px;
+  grid-template-columns: repeat(2, 1fr);
+  border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+  gap: 102px;
+}
+.logo-box>li>a {
+  font-size: 4.375rem;
+  font-weight: 800;
+  line-height: 120%;
+  font-style: italic;
+  color: var(--logo-color);
+}
+.logo-box {
+  color:var(--secondary-text);
+}
+
+.link-box{
+  display: flex;
+  gap: 150px;
+}
+.link-box li{
+  padding: 10px 0px;
+}
+.link-box h3{
+  color: var(--primary-text);
+}
+.link-box li>a{
+  color: var(--secondary-text);
+}
+
+
+.all-right-reserved{
+  text-align: center;
+  padding: 30px 0px;
+  color: var(--secondary-text);
+}
+/* footer styles end  */
