--- a/Style/mobail.css
+++ b/Style/mobail.css
@@ -61,10 +61,10 @@
     letter-spacing: 0.76px;
   }
 
-  .tutorial-text-box > h1{
+  .tutorial-text-box > h1 {
     font-size: 1.125rem;
   }
-  .circle{
+  .circle {
     width: 30px;
     height: 30px;
   }
@@ -86,11 +86,11 @@
   }
 
   /* habits styles  */
-  .habits-section-heading-box{
+  .habits-section-heading-box {
     padding: 10px 20px;
   }
   .habits-container {
-    grid-template-columns:  1fr;
+    grid-template-columns: 1fr;
     padding: 50px;
   }
 
@@ -99,7 +99,7 @@
   .run-easily {
     padding-bottom: 66px;
   }
-  .section-title{
+  .section-title {
     font-size: 2rem;
   }
   .run-easily-container {
@@ -114,17 +114,23 @@
     /* padding: 20px; */
     gap: 31px;
   }
-  .run-easily-text-box,.run-easily-image-box, .run-btn  ,.bmi-heading-box,.bmi-chart-box,.calculate-btn,.bmi-calculate-box, .our-teams-heading{
+  .run-easily-text-box,
+  .run-easily-image-box,
+  .run-btn,
+  .bmi-heading-box,
+  .bmi-chart-box,
+  .calculate-btn,
+  .bmi-calculate-box,
+  .our-teams-heading {
     width: 100%;
   }
   .run-easily-container {
     padding: 31px 33px;
   }
-  
-.bmi-heading-box {
-  padding: 0px 20px 40px 20px;
 
-}
+  .bmi-heading-box {
+    padding: 0px 20px 40px 20px;
+  }
   .bmi-calculator-container {
     display: flex;
     padding: 0px 20px 50px 20px;
@@ -132,23 +138,45 @@
   }
   .bmi-calculator {
     padding: 0px;
-}
+  }
 
   /* bmi calculator styles end  */
-  .our-teams{
+  .our-teams {
     padding: 50px 20px;
     padding-top: 40px;
   }
   /* our team styles  */
   .our-teams-container {
-
     grid-template-columns: 1fr;
-
   }
+
+  /* our review start  */
+  .our-review-heading {
+    width: calc(100% - 20px);
+  }
+  .our-reviews-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0px 20px;
+  }
+  .image-box {
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+  }
+  .review img {
+    width: 100%;
+    display: flex;
+  }
+  .review {
+    margin: 0px;
+  }
+
+  /* our review end  */
+
   /* footer styles start  */
   .footer {
-
-    grid-template-columns:  1fr;
+    grid-template-columns: 1fr;
     padding: 30px 0px;
     width: calc(100% - 40px);
     gap: 40px;
@@ -157,17 +185,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
- 
-}
-.link-box p{
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.3px;
-  padding-top: 20px;
-}
+  }
+  .link-box p {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0.3px;
+    padding-top: 20px;
+  }
 
   /* footer styles end  */
-
-
 }
